Bug 1009980 - Fix the SurfaceSteam readback for Canvas 2D screenshot. r=snorp, a=1.4+